--- a/src/components/css/Pagination.module.css
+++ b/src/components/css/Pagination.module.css
@@ -12,10 +12,22 @@
     
   .pagination-container button {
     margin-right: 0.2rem;
-    margin-top: 0.5rem;
+    /* margin-top: 0.5rem;
     border: none;
     width: 50px;
+    height: 30px; */
+
+    margin-top: 0.5rem;
+    width: 50px;
     height: 30px;
+    background-color: #2364d2; 
+    padding-top: 5px;
+    font-weight: 500;
+    margin-right: 0.5rem;
+    border-radius: 10px;
+    color: white;
+    padding-left: 15px;
+    padding-right: 15px; 
   }
   
   .pagination-container-no-records-hide {
@@ -39,10 +51,22 @@
   }
   
   .pagination-container .button-selected {
-    background-color: rgba(114, 114, 124, 0.4);
+    /* background-color: rgba(114, 114, 124, 0.4);
     border: none; 
     border: 1px solid rgba(2, 2, 22, 0.4);
-    height: 35px;
+    height: 35px; */
+
+    margin-top: 0.5rem;
+    width: 50px;
+    height: 30px;
+    background-color: #2c3e50; 
+    padding-top: 5px;
+    font-weight: 500;
+    margin-right: 0.5rem;
+    border-radius: 10px;
+    color: white;
+    padding-left: 15px;
+    padding-right: 15px; 
   }
   
   .number-of-pages {
