--- a/src/features/employee/css/Employee-list-toolbar.module.css
+++ b/src/features/employee/css/Employee-list-toolbar.module.css
@@ -8,11 +8,22 @@
   width: 60%;
 } 
 
-.search-bar button { 
+/* .search-bar button { 
   background-color: rgba(167, 164, 243, 0.4);
   border: 1px solid rgba(2, 2, 22, 0.4);
   padding-top: 5px;
   margin-right: 0.5rem;
+} */
+
+.search-bar button {
+    background-color: #2364d2; 
+    padding-top: 5px;
+    font-weight: 500;
+    margin-right: 0.5rem;
+    border-radius: 10px;
+    color: white;
+    padding-left: 15px;
+    padding-right: 15px; 
 }
 
 .search-bar button:hover {
