--- a/src/components/css/Pagination.module.css
+++ b/src/components/css/Pagination.module.css
@@ -11,16 +11,11 @@
   }
     
   .pagination-container button {
-    margin-right: 0.2rem;
-    /* margin-top: 0.5rem;
-    border: none;
-    width: 50px;
-    height: 30px; */
-
+    margin-right: 0.2rem; 
     margin-top: 0.5rem;
     width: 50px;
     height: 30px;
-    background-color: #2364d2; 
+    background-color: lightslategrey; 
     padding-top: 5px;
     font-weight: 500;
     margin-right: 0.5rem;
@@ -50,12 +45,7 @@
     border: 1px solid rgba(2, 2, 22, 0.4);
   }
   
-  .pagination-container .button-selected {
-    /* background-color: rgba(114, 114, 124, 0.4);
-    border: none; 
-    border: 1px solid rgba(2, 2, 22, 0.4);
-    height: 35px; */
-
+  .pagination-container .button-selected { 
     margin-top: 0.5rem;
     width: 50px;
     height: 30px;
