--- a/src/components/css/Toolbar.module.css
+++ b/src/components/css/Toolbar.module.css
@@ -4,6 +4,7 @@
   gap: 1rem;
   justify-content: space-between;
   width: 100%;
+  height: 30px;
 }
 
 .toolbar-buttons {
@@ -24,7 +25,7 @@
 }
 
 .select {
-  padding: 0.5rem;
+  padding: 5px;
   border-radius: 4px;
   border: 1px solid #ccc;
   width: 130px;
