--- a/src/features/import-employee/css/Import-employee.module.css
+++ b/src/features/import-employee/css/Import-employee.module.css
@@ -10,19 +10,11 @@
   color:rgb(248, 248, 245);
   background-color: rgb(130, 130, 126);
   font-weight: bold;
-}
-
-/* .import-employees-summary {
-    margin-top: 16px;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    background-color: #f9f9f9;
-} */
+} 
 
 .import-employees-summary {
-  background: #f8fafc; /* light gray-blue background */
-  border: 1px solid #e2e8f0; /* soft border */
+  background: #f8fafc;
+  border: 1px solid #e2e8f0;
   border-radius: 12px;
   padding: 16px 20px;
   margin-top: 16px;
@@ -34,8 +26,8 @@
 }
 
 .import-employees-instructions {
-  background: #f8fafc; /* light gray-blue background */
-  border: 1px solid #e2e8f0; /* soft border */
+  background: #f8fafc;
+  border: 1px solid #e2e8f0;
   border-radius: 12px;
   padding: 16px 20px;
   margin-top: 16px;
@@ -49,7 +41,7 @@
 
 .date {
   font-size: 14px;
-  color: #475569; /* slate-600 */
+  color: #475569;
   font-weight: 500;
 }
 
@@ -65,27 +57,9 @@
   border-radius: 8px;
   border: 1px solid #e2e8f0;
   font-size: 14px;
-  color: #334155; /* slate-700 */
+  color: #334155;
 }
 
 .stats strong {
-  color: #0f172a; /* darker for emphasis */
-}
-
-.button {
-  align-self: flex-start;
-  background-color: #2c3e50;
-  color: #fff;
-  padding: 10px 18px;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-  font-size: 14px;
-  font-weight: 500;
-  transition: background-color 0.2s ease-in-out;
-}
-
-.button:hover {
-  background: #4d6277ff; /* slightly darker hover */
-  color: #747982ff; /* darker text on hover */
+  color: #0f172a;
 }
